# pointnetvlad

./: README.md  gen_Ford_vec.py  gen_Ford_vec_ref.py  gen_KITTI_vec.py  gen_KITTI_vec_ref.py  loading_pointclouds.py  loading_pointclouds_ford.py  loading_pointclouds_kitti.py  train_pointnetvlad_kitti.py  visu_pc.py
submap_generation/: 08.txt
submap_generation/Ford/: gen_gt_submap.py
submap_generation/KITTI/: gen_gt.py  gen_gt_submap.py
submap_generation/KITTI/cpp/: CMakeLists.txt  cluster_000130.pcd  segment_submap.cpp  segment_submap_xyzi.cpp  segment_submap_xyzl.cpp
